"Added the user login feature"